# finterion-investing-algorithm-framework-plugin

./: README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  test.py  version.py
.github/workflows/: test.yml
finterion_investing_algorithm_framework/: __init__.py  constants.py  create_app.py  exceptions.py  market_service.py  order_executor.py  ping_hook.py  portfolio_provider.py  utils.py  validation.py
finterion_investing_algorithm_framework/configuration/: __init__.py  constants.py
finterion_investing_algorithm_framework/models/: __init__.py  portfolio_configuration.py
tests/: __init__.py  app.py
tests/models/: test_order_models.py
