[tool.poetry]
name = "finterion-investing-algorithm-framework"
version = "v0.14.2"
description = "This is the official plugin for the investing algorithm framework open source project."
authors = ["Marc van Duyn <marc@finterion.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
investing-algorithm-framework = "^3.2.0"
finterion = "^0.8.8"

[tool.poetry.group.test.dependencies]
coverage= "7.4.2"
flake8 = "7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
